[tool.poetry]
name = "lambda-payload-test"
version = "0.1.0"
description = ""
authors = ["Sean Jin <seanjin97@gmail.com>"]
readme = "README.md"
packages = [{include = "lambda_payload_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
openpyxl = "^3.0.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
